--- a/CaveSerene/CaveSerene/packages.config
+++ b/CaveSerene/CaveSerene/packages.config
@@ -17,6 +17,7 @@
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="11.0.2" targetFramework="net45" />
   <package id="NUglify" version="1.5.12" targetFramework="net45" />
+  <package id="Oracle.ManagedDataAccess" version="18.3.0" targetFramework="net461" />
   <package id="Select2.js" version="3.5.1" targetFramework="net45" />
   <package id="Serenity.CodeGenerator" version="3.9.6" targetFramework="net45" />
   <package id="Serenity.Core" version="3.9.6" targetFramework="net45" />
