--- a/CaveSerene/CaveSerene/Web.config
+++ b/CaveSerene/CaveSerene/Web.config
@@ -17,8 +17,9 @@
     <add key="vs:EnableBrowserLink" value="false" />
   </appSettings>
   <connectionStrings>
-    <add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CaveSerene;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
-    <add name="DefaultNO" connectionString="DATA SOURCE=172.29.203.202:1521/XEPDB1;PASSWORD=CAVESERENE;PERSIST SECURITY INFO=True;USER ID=CAVESERENE;POOLING=FALSE" providerName="Oracle.ManagedDataAccess.Client" />
+    <!--<add name="Default" connectionString="Data Source=(localdb)\MSSQLLocalDB;Initial Catalog=CaveSerene;Integrated Security=True;Connect Timeout=30;Encrypt=False;TrustServerCertificate=False;ApplicationIntent=ReadWrite;MultiSubnetFailover=False" providerName="System.Data.SqlClient" />
+    <add name="DefaultNO" connectionString="DATA SOURCE=172.29.203.202:1521/XEPDB1;PASSWORD=CAVESERENE;PERSIST SECURITY INFO=True;USER ID=CAVESERENE;POOLING=FALSE" providerName="Oracle.ManagedDataAccess.Client" />-->
+    <add name="Default" connectionString="user id=YOUR_USER; password=YOUR_PWD; data source=REM" providerName="Oracle.ManagedDataAccess.Client"/>
   </connectionStrings>
   <system.net>
     <mailSettings>
@@ -118,7 +119,7 @@
   <oracle.manageddataaccess.client>
     <version number="*">
       <dataSources>
-        <dataSource alias="SampleDataSource" descriptor="(DESCRIPTION=(ADDRESS=(PROTOCOL=tcp)(HOST=localhost)(PORT=1521))(CONNECT_DATA=(SERVICE_NAME=ORCL))) " />
+        <dataSource alias="REM" descriptor="(description=(retry_count=20)(retry_delay=3)(address=(protocol=tcps)(port=1522)(host=adb.eu-zurich-1.oraclecloud.com))(connect_data=(service_name=cfdnkbdx0aohvkj_dbtest1_high.adb.oraclecloud.com))(security=(my_wallet_directory=.)(ssl_server_cert_dn=&quot;CN=adb.eu-zurich-1.oraclecloud.com,OU=Oracle ADB ZURICH,O=Oracle Corporation,L=Redwood City,ST=California,C=US&quot;)))"/>
       </dataSources>
     </version>
   </oracle.manageddataaccess.client>
