--- a/CaveSerene/CaveSerene/CaveSerene.csproj
+++ b/CaveSerene/CaveSerene/CaveSerene.csproj
@@ -2414,6 +2414,7 @@
   <ItemGroup>
     <Folder Include="App_Data\" />
     <Folder Include="Migrations\DefaultDB\" />
+    <Folder Include="Properties\PublishProfiles\" />
   </ItemGroup>
   <ItemGroup>
     <Service Include="{4A0DDDB5-7A95-4FBF-97CC-616D07737A77}" />
