--- a/CaveSerene/CaveSerene/CaveSerene.csproj
+++ b/CaveSerene/CaveSerene/CaveSerene.csproj
@@ -840,6 +840,16 @@
     <Content Include="ewallet.p12" />
     <Content Include="keystore.jks" />
     <Content Include="ojdbc.properties" />
+    <Content Include="Imports\ClientTypes\ClientTypes.log">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ClientTypes.tt</DependentUpon>
+    </Content>
+    <Content Include="Imports\ServerTypings\ServerTypings.log">
+      <AutoGen>True</AutoGen>
+      <DesignTime>True</DesignTime>
+      <DependentUpon>ServerTypings.tt</DependentUpon>
+    </Content>
     <None Include="Scripts\jquery-3.3.1.intellisense.js" />
     <Content Include="Scripts\jquery-3.3.1.js" />
     <Content Include="Scripts\jquery-3.3.1.min.js" />
