--- a/CaveSerene/CaveSerene.Web/appsettings.json
+++ b/CaveSerene/CaveSerene.Web/appsettings.json
@@ -4,10 +4,10 @@
       "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=CaveSerene_Default_v1;Integrated Security=true",
       "ProviderName": "System.Data.SqlClient"
     },
-    "Northwind": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=CaveSerene_Northwind_v1;Integrated Security=true",
-      "ProviderName": "System.Data.SqlClient"
-    }
+    //"Northwind": {
+    //  "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=CaveSerene_Northwind_v1;Integrated Security=true",
+    //  "ProviderName": "System.Data.SqlClient"
+    //}
   },
   "Logging": {
     "IncludeScopes": false,
