--- a/CaveSerene/CaveSerene.Web/appsettings.json
+++ b/CaveSerene/CaveSerene.Web/appsettings.json
@@ -1,9 +1,13 @@
 ﻿{
   "Data": {
     "Default": {
-      "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=CaveSerene_Default_v1;Integrated Security=true",
-      "ProviderName": "System.Data.SqlClient"
+      "ConnectionString": "data source=App_Data\\caveserene.sqlite",
+      "ProviderName": "Microsoft.Data.Sqlite"
     },
+    //"Default": {
+    //  "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=CaveSerene_Default_v1;Integrated Security=true",
+    //  "ProviderName": "System.Data.SqlClient"
+    //}
     //"Northwind": {
     //  "ConnectionString": "Server=(localdb)\\MsSqlLocalDB;Database=CaveSerene_Northwind_v1;Integrated Security=true",
     //  "ProviderName": "System.Data.SqlClient"
